# ezmenu

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
ezmenu-macro/: Cargo.toml
ezmenu-macro/src/: struct_field.rs  struct_impl.rs  utils.rs
ezmenu-macros/: Cargo.toml
ezmenu-macros/src/: lib.rs  struct_field.rs  struct_impl.rs
src/: lib.rs
