[package]
name = "ezmenu-derive"
version = "0.2.5"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenu-derive"
description = "Builds a CLI menu with a derive."
repository = "https://github.com/ahbalbk/ezmenu-derive"
keywords = ["cli", "derive", "menu", "interface"]
categories = ["command-line-interface"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezmenu-macros = { version = "0.2.5", path = "ezmenu-macros" }
ezmenu = "0.2.5"