[package]
name = "ezmenu"
version = "0.2.7"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenu-derive"
description = "Builds a CLI menu with a derive."
repository = "https://github.com/ahbalbk/ezmenu-derive"
keywords = ["cli", "derive", "menu", "interface"]
categories = ["command-line-interface"]
license = "MIT"

[features]
default = ["derive", "parsed"]
derive = ["ezmenu-macros/derive"]
parsed = ["ezmenu-macros/parsed"]

[dependencies]
ezmenu-macros = { version = "0.2.5", path = "ezmenu-macros" }
ezmenu = "=0.2.7"