[package]
name = "ezmenu"
version = "0.2.9"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenu"
description = "Builds a CLI menu with simple macros."
repository = "https://github.com/ahbalbk/ezmenu"
keywords = ["cli", "derive", "menu", "interface"]
categories = ["command-line-interface"]
license = "MIT"

[features]
default = ["derive", "parsed"]
derive = ["ezmenu-macros/derive"]
parsed = ["ezmenu-macros/parsed"]

[dependencies]
ezmenu-macros = { version = "0.2.5", path = "ezmenu-macros" }
ezmenulib = "0.2.7"