[package]
name = "ezmenu-macros"
version = "0.2.8"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmad@salondesdevs.fr>"]
documentation = "https://docs.rs/ezmenu-macros"
description = "Builds a CLI menu with a derive."
repository = "https://github.com/ahbalbk/ezmenu-macros"
keywords = ["cli", "derive", "menu", "interface"]
categories = ["command-line-interface"]
license = "MIT"

[features]
default = ["derive", "parsed"]
derive = []
parsed = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.86", features = ["extra-traits"] }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.36"
quote = "1.0.15"
